@@ -40,6 +40,7 @@ public:
   virtual void OnMouseWheel();
   virtual bool OnMessage(CGUIMessage& message);
   virtual void SetNavigation(DWORD dwUp, DWORD dwDown, DWORD dwLeft, DWORD dwRight);
+  virtual void SetPosition(int iPosX, int iPosY);
   virtual bool HitTest(int iPosX, int iPosY) const;
 
   virtual bool CanFocus() const;
