@@ -41,6 +41,7 @@ public:
   virtual void FreeResources() ;
   virtual void DynamicResourceAlloc(bool bOnOff);
   virtual void SetNavigation(DWORD dwUp, DWORD dwDown, DWORD dwLeft, DWORD dwRight);
+  virtual void SetPosition(int iPosX, int iPosY);
   void SetScrollySuffix(CStdString wstrSuffix);
   void SetTextureDimensions(int iWidth, int iHeight);
   void SetThumbAlign(int align);
